--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "cheerio": "^0.22.0",
+    "mongoose": "^4.6.0",
+    "node-rest-client":"^2.0.1",
+    "utf8":"^2.1.1",
+    "fs": "0.0.1-security"
+
   },
   "devDependencies": {},
   "bundleDependencies": [],
