--- a/package.json
+++ b/package.json
@@ -18,24 +18,19 @@
     "type": "git",
     "url": "https://github.com/openshift/origin-server"
   },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
-    "express": "~3.4.4",
     "cheerio": "^0.22.0",
-    "mongoose": "^4.6.0",
-    "node-rest-client":"^2.0.1",
-    "utf8":"^2.1.1",
-    "fs": "0.0.1-security"
-
+    "express": "~3.4.4",
+    "mongoose": "^4.6.4",
+    "node-rest-client": "^2.0.1",
+    "utf8": "^2.1.2"
   },
   "devDependencies": {},
   "bundleDependencies": [],
-
   "private": true,
   "main": "server.js"
 }
